funcionalidad para agregar usuarios añadida

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<header class="app-header">
+<!-- <header class="app-header">
   <div class="logo">Loan Management</div>
   <nav class="nav-menu">
     <ul>
@@ -9,4 +9,21 @@
       <li><a routerLink="/settings" routerLinkActive="active">Settings</a></li>
     </ul>
   </nav>
+</header> -->
+
+<header class="app-header">
+  <div class="logo">Loan Management</div>
+  <nav class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </nav>
 </header>
+
+<!-- <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div> -->
