--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -8,46 +8,34 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
+.topnav {
+  /* background-color: #333; */
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: var(--white);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: var(--medium-purple);
+  color: white;
+}
+
 .logo {
   font-size: 1.5rem;
   font-weight: bold;
-}
-
-.nav-menu ul {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.nav-menu ul li {
-  margin-left: 1.5rem;
-}
-
-.nav-menu ul li a {
-  color: var(--white);
-  text-decoration: none;
-  font-weight: 500;
-  padding: 0.5rem 0;
-  position: relative;
-}
-
-.nav-menu ul li a::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 0;
-  height: 2px;
-  background-color: var(--light-purple);
-  transition: width 0.3s ease;
-}
-
-.nav-menu ul li a:hover::after, 
-.nav-menu ul li a.active::after {
-  width: 100%;
-}
-
-.nav-menu ul li a.active {
-  color: var(--light-purple);
 }
