--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,16 +1,9 @@
 <div class="user-list">
-  <div class="user-list-header">
-    <div class="col-id">ID</div>
-    <div class="col-name">Name</div>
-    <div class="col-email">Email</div>
-    <div class="col-status">Status</div>
-  </div>
-  
   @for (user of users; track user.id) {
     <app-user-item [user]="user"></app-user-item>
   } @empty {
-    <div class="no-users">
-      No users found
+    <div class="empty-state">
+      <p>No users found</p>
     </div>
   }
 </div>
