--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,8 +1,6 @@
 <div class="container">
-  <div class="header">
-    <h1>User List</h1>
-    <p>Manage your users</p>
-  </div>
-  
+  <h1>User List</h1>
   <app-user-list [users]="users"></app-user-list>
+
+  <app-add-button routerLink="/add-user"></app-add-button>
 </div>
