--- a/src/app/pages/add-user/add-user.component.css
+++ b/src/app/pages/add-user/add-user.component.css
@@ -30,6 +30,19 @@ input[type=text], input[type=email], input[type=number], select, textarea {
   margin-bottom: 10px;
 }
 
+input[type=submit] {
+  background-color: var(--deep-purple);
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: var(--medium-purple);
+}
+
 .container {
   border-radius: 5px;
   background-color: #f2f2f2;
