--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -34,6 +34,11 @@
   background-color: var(--medium-purple);
   color: white;
 }
+/* 
+.logo a {
+  font-size: 1.5rem;
+  font-weight: bold;
+} */
 
 .logo {
   font-size: 1.5rem;
