--- a/src/app/pages/add-user/add-user.component.css
+++ b/src/app/pages/add-user/add-user.component.css
@@ -50,3 +50,10 @@ input[type=submit]:hover {
   width: 50%;
   margin: auto;
 }
+
+input:disabled {
+  background-color: #e9ecef;
+  color: #6c757d;
+  cursor: not-allowed;
+  opacity: 1;
+}
