--- a/src/app/components/user-item/user-item.component.html
+++ b/src/app/components/user-item/user-item.component.html
@@ -19,4 +19,7 @@
       </ul>
     </div>
   }
+  <div class="user-actions">
+    <button class="edit-btn" [routerLink]="['/edit-user', user.id]">Edit</button>
+  </div>
 </div>
