--- a/src/app/pages/edit-user/edit-user.component.html
+++ b/src/app/pages/edit-user/edit-user.component.html
@@ -1,1 +1,18 @@
-<p>edit-user works!</p>
+<div>
+    <label for="name">Name: </label>
+    <input type="text" id="name" [(ngModel)]="user!.name" placeholder="Name" />
+</div>
+<div>
+    <label for="email">Email: </label>
+    <input type="text" id="email" [(ngModel)]="user!.email" placeholder="Email" />
+</div>
+<div>
+    <label for="age">Age: </label>
+    <input type="text" id="age" [(ngModel)]="user!.age" placeholder="Age" />
+</div>
+<div>
+    <label for="isActive">Active: </label>
+    <input type="checkbox" id="isActive" [(ngModel)]="user!.isActive" />
+</div>
+
+<button (click)="updateUser()">Update</button>
